# BankInfo

./: .env.template  README.md  fly.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
banks/: models.py  urls.py  views.py
banks/management/commands/: seed.py
banks/migrations/: 0001_initial.py
core/: settings.py  urls.py
src/scripts/: app.js  bank.js
static/scripts/: app.js
templates/banks/: detail.html  index.html
