[tool.poetry]
name = "bankinfo"
version = "0.1.0"
description = ""
authors = ["Josh Lin <mingyi1223@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
